--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 'GSM' is Greg Sabino Mullane, greg@turnstep.com
 
 
-Version 2.19.1
+Version 2.19.1  Released March 10, 2012
 
   - Fix crash when passing in an array with undefined elements. [GSM]
 
