--- a/Changes
+++ b/Changes
@@ -1,6 +1,12 @@
 'GSM' is Greg Sabino Mullane, greg@turnstep.com
 
 
+Version 2.19.2  Released March 12, 2012
+
+  - Fix errors when multiple same-named placeholders are used. [GSM]
+    (CPAN bug #75713)
+
+
 Version 2.19.1  Released March 10, 2012
 
   - Fix crash when passing in an array with undefined elements. [GSM]
