Ready for release 2.19.2

--- a/Changes
+++ b/Changes
@@ -7,7 +7,7 @@ Version 2.19.2  Released March 12, 2012
     (CPAN bug #75713)
 
 
-Version 2.19.1  Released March 10, 2012
+Version 2.19.1  Released March 10, 2012 (git commit db6f6da00467c7ea28d32c4df97e93ccc4d38f2b)
 
   - Fix crash when passing in an array with undefined elements. [GSM]
 
