--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@ Possible items to do, in no particular order
 Feature requests can be entered at 
 http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
 
+- Fix ping problem: http://www.cpantesters.org/cpan/report/53c5cc72-6d39-11e1-8b9d-82c3d2d9ea9f
 - Use WITH HOLD for cursor work
 - Devise a way to automatically create ppm for Windows builds
 - I8N docs and error messages
