--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@
 Version ???
 
 
+  - Better handling of libpq errors to return SQLSTATE 08000 (Stephen Keller)
+
   - Make sure CREATE TABLE .. AS SELECT returns rows in non do() cases. [GSM]
 
   - Spelling fix per CPAN bug #78168
