Note last change

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
 
 Version ???
 
+  - Do not force oids to Perl ints (CPAN bug #85836)
 
   - Adjust lo_import_with_oid check for 8.3 (CPAN bug #83145)
 
