--- a/Changes
+++ b/Changes
@@ -24,6 +24,12 @@ Version 3.0.0?
 
   - Make sure CREATE TABLE .. AS SELECT returns rows in non do() cases. [GSM]
 
+  - Fix ORDINAL_POSITION in foreign_key_info
+    [Dagfinn Ilmari Mannsåker] (CPAN bug #88794)
+
+  - Fix foreign_key_info with unspecified schema
+    [Dagfinn Ilmari Mannsåker] (CPAN bug #88787)
+
   - Remove math.h linking, as we no longer need it (CPAN bug #79256)
 
   - Spelling fix per CPAN bug #78168
