--- a/README
+++ b/README
@@ -2,11 +2,21 @@ DBD::Pg is Copyright (C) 1994-2013, Greg Sabino Mullane
 
 DBD::Pg  --  the DBI PostgreSQL interface for Perl
 
+===================================================
+WARNING!!
+
+THIS IS A TEST VERSION (2.20.1_1) AND SHOULD BE USED 
+FOR TESTING PURPOSES ONLY. PLEASE USE A STABLE 
+VERSION (no underscore) BY VISITING:
+
+http://search.cpan.org/dist/DBD-Pg/
+===================================================
+
 
 DESCRIPTION:
 ------------
 
-This is version 2.19.3 of DBD::Pg, the Perl interface to Postgres using DBI. 
+This is version 2.20.1_1 of DBD::Pg, the Perl interface to Postgres using DBI. 
 The web site for this interface, and the latest version, can be found at:
 
 	http://search.cpan.org/dist/DBD-Pg/
@@ -30,7 +40,7 @@ REQUIREMENTS:
 -------------
 
 	build, test, and install Perl 5         (at least 5.8.1)
-	build, test, and install the DBI module (at least 1.54)
+	build, test, and install the DBI module (at least 1.614)
 	build, test, and install PostgreSQL     (at least 7.4)
 	build, test, and install Test::Simple   (at least 0.47)
 
