--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
  'GSM' is Greg Sabino Mullane, greg@turnstep.com
 
 
+Version 3.1.1  Released April 6, 2014 (git commit ?)
+
+  - Minor adjustments so tests pass in varying locales.
+
+
 Version 3.1.0  Released April 4, 2014 (git commit 26517a3531f93de79375a02da45a79789cd3caae)
 
   - Make sure UTF-8 enabled notifications are handled correctly
@@ -8,6 +13,7 @@ Version 3.1.0  Released April 4, 2014 (git commit 26517a3531f93de79375a02da45a79
 
   - Allow "WITH" and "VALUES" as valid words starting a DML statement
     [Greg Sabino Mullane] (CPAN bug #92724)
+
 
 Version 3.0.0  Released February 3, 2014 (git commit 9725314f27a8d65fc05bdeda3da8ce9c251f79bd)
 
