--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
  'GSM' is Greg Sabino Mullane, greg@turnstep.com
 
+Version 3.2.1
+
+  - Adjust test regex to fix failing t/01_connect.t on some platforms
+    [Greg Sabino Mullane]
+
 
 Version 3.2.0  Released May 15, 2014 (git commit 897974c2865259bb9786d8b0989f8e42db0a0d79)
 
