--- a/Changes
+++ b/Changes
@@ -13,13 +13,16 @@ Version 3.3.0  unreleased
       Test pg_enable_utf8 of -1, in addition to 0 and 1.
       Extend the Unicode round-trip tests to verify ASCII, BMP and non-BMP code points.
       Test that characters created in the server reach the client correctly.
-    [Nicholas Clark <nick@ccl4.org>]
+    [Nicholas Clark]
 
   - Rewrite foreign_key_info to be just one query
     [Dagfinn Ilmari Mannsåker]
 
   - Remove ODBC support from foreign_key_info
     [Dagfinn Ilmari Mannsåker]
+
+  - Remove use of dTHX in functions in quote.c and types.c
+    [Nicholas Clark]
 
 
 Version 3.2.1  Released May 20, 2014 (git commit a56ef5c4715440d4fc2054df5477996b0e287467)
