--- a/TODO
+++ b/TODO
@@ -7,6 +7,8 @@ May also be some at
 https://github.com/bucardo/dbdpg
 (although we prefer using cpan.org)
 
+- Allow partial result sets, either via PQsetSingleRowMode or something better
+- Hack libpq to make user-defined number of rows returned
 - Map hstore to hashes ala array/array mapping
 - Fix ping problem: http://www.cpantesters.org/cpan/report/53c5cc72-6d39-11e1-8b9d-82c3d2d9ea9f
 - Use WITH HOLD for cursor work
