--- a/Changes
+++ b/Changes
@@ -1,10 +1,14 @@
  'GSM' is Greg Sabino Mullane, greg@turnstep.com
 
 
-Version ??
+Version 3.4.0
+
+  - Cleanup and improve table_info(), add LOCAL TEMPORARY support.
+    [Mike Pomraning <mjp@pilcrow.madison.wi.us>] (github issue #7)
 
   - Make sure column_info() and table_info() can handle materialized views.
     [Greg Sabino Mullane] (CPAN bug #97032)
+
 
 
 Version 3.3.0  Released May 31, 2014 (git commit 055f788cf96b380b9fe0e80b6cedb88f8d1799b8)
