--- a/Changes
+++ b/Changes
@@ -1,6 +1,15 @@
  'GSM' is Greg Sabino Mullane, greg@turnstep.com
 
 
+Version 3.4.1
+
+    - Allow '%' again for the type in table_info() and thus tables()
+      It's not documented or tested in DBI, but it used to work until
+      DBD::Pg 3.4.0, and the change broke DBIx::Class::Schema::Loader, which
+      uses type='%'.
+      [Dagfinn Ilmari Mannsåker <ilmari@ilmari.org>]
+
+
 Version 3.4.0  Released August 16, 2014 (git commit 7a5da12d84b4c2e9879f90fb6168f56c095071fa)
 
   - Cleanup and improve table_info()
