--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@ May also be some at
 https://github.com/bucardo/dbdpg
 (although we prefer using cpan.org)
 
+- Make all tests work when server and/or client encoding is SQL_ASCII
 - Enable native JSON decoding, similar to arrays, perhaps with JSON::PP
 - Allow partial result sets, either via PQsetSingleRowMode or something better
 - Hack libpq to make user-defined number of rows returned
