Ready to release version 3.4.2

--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
  'GSM' is Greg Sabino Mullane, greg@turnstep.com
 
 
-Version 3.4.2
+Version 3.4.2  Released September 25, 2015 (git commit 61440e1f4ccb6c293c5838676da1942e0df67271)
 
   - Fix bug where single-quoted type arguments to the table_info()
     method were causing a SQL error.
