--- a/Changes
+++ b/Changes
@@ -5,7 +5,7 @@ Version 3.4.3
 
   - Improve the workings of the ping() method, so it always tests for 
     a valid database backend and returns the correct true/false.
-    [Greg Sabino Mullane] (CAN bug #100648)
+    [Greg Sabino Mullane] (CPAN bug #100648)
 
   - In tests, force the client_encoding to UTF8, skip tests that involve 
     characters not supported by the server_encoding
