--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
  'GSM' is Greg Sabino Mullane, greg@turnstep.com
 
 
-Version 3.5.0
+Version 3.5.0  Released January 6, 2015
 
   - Allow "placeholder escaping" by the use of a backslash directly before it, e.g.
     "SELECT 1 FROM jsontable WHERE foo \\? ?"
