--- a/Changes
+++ b/Changes
@@ -1,12 +1,16 @@
  'GSM' is Greg Sabino Mullane, greg@turnstep.com
 
 
-Version ??
+Version 3.5.1
 
   - Prevent core dump if the second argument to the quote() method 
     is anything but a hashref
     [Greg Sabino Mullane]
     (CPAN bug #101980)
+
+  - Better "support" for SQL_ASCII servers in the tests.
+    Allow env var DBDPG_TEST_ALWAYS_ENV to force use of DBI_DSN and DBI_USER in tests.
+    [Greg Sabino Mullane]
 
 
 Version 3.5.0  Released January 6, 2015 (git commit bb13d3306fd1c73fac1c0c8a330c14e6b8443942)
