--- a/Changes
+++ b/Changes
@@ -12,6 +12,14 @@ Version 3.5.1
     Allow env var DBDPG_TEST_ALWAYS_ENV to force use of DBI_DSN and DBI_USER in tests.
     [Greg Sabino Mullane]
 
+  - Fix client_encoding detection on pre-9.1 servers
+    [Dagfinn Ilmari Mannsåker]
+
+  - Fix operator existence check in tests on pre-8.3 servers
+    [Dagfinn Ilmari Mannsåker]
+
+  - Documentation fix
+    [Stuart A Johnston]
 
 Version 3.5.0  Released January 6, 2015 (git commit bb13d3306fd1c73fac1c0c8a330c14e6b8443942)
 
@@ -32,7 +40,7 @@ Version 3.5.0  Released January 6, 2015 (git commit bb13d3306fd1c73fac1c0c8a330c
 
   - In tests, force the client_encoding to UTF8, skip tests that involve 
     characters not supported by the server_encoding
-    [Dagfinn Ilmari Mannsåker <ilmari@ilmari.org>]
+    [Dagfinn Ilmari Mannsåker]
 
   - Fix memory leak when selecting from arrays
     [Dagfinn Ilmari Mannsåker, reported by Krystian Samp]
@@ -54,7 +62,7 @@ Version 3.4.1  Released August 20, 2014 (git commit cfd146effde09c493ac7573408ac
     It's not documented or tested in DBI, but it used to work until
     DBD::Pg 3.4.0, and the change broke DBIx::Class::Schema::Loader, which
     uses type='%'.
-    [Dagfinn Ilmari Mannsåker <ilmari@ilmari.org>]
+    [Dagfinn Ilmari Mannsåker]
 
 
 Version 3.4.0  Released August 16, 2014 (git commit 7a5da12d84b4c2e9879f90fb6168f56c095071fa)
