--- a/README
+++ b/README
@@ -1,14 +1,3 @@
-
-===================================================
-WARNING!!
-
-THIS IS A TEST VERSION (3.5.0_2) AND SHOULD BE USED 
-FOR TESTING PURPOSES ONLY. PLEASE USE A STABLE 
-VERSION (no underscore) BY VISITING:
-
-http://search.cpan.org/dist/DBD-Pg/
-===================================================
-
 DBD::Pg is Copyright (C) 1994-2015, Greg Sabino Mullane
 
 DBD::Pg  --  the DBI PostgreSQL interface for Perl
@@ -16,7 +5,7 @@ DBD::Pg  --  the DBI PostgreSQL interface for Perl
 DESCRIPTION:
 ------------
 
-This is version 3.5.0_2 of DBD::Pg, the Perl interface to Postgres using DBI. 
+This is version 3.5.1 of DBD::Pg, the Perl interface to Postgres using DBI. 
 The web site for this interface, and the latest version, can be found at:
 
 	http://search.cpan.org/dist/DBD-Pg/
