--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
  'GSM' is Greg Sabino Mullane, greg@turnstep.com
 
 
-Version 3.5.1  Released February 17, 2015
+Version 3.5.1  Released February 17, 2015 (git commit 6c3457ee20c19ae492d29c490af6800e7e6a0774)
 
   - Prevent core dump if the second argument to the quote() method 
     is anything but a hashref
