--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@
   - Fix enum value ordering on Postgres servers 9.1 and greater
     [Dagfinn Ilmari Mannsåker]
 
+  - Return bigint values as plain integer values when they fit
+    [Dagfinn Ilmari Mannsåker]
+
 Version 3.5.1  Released February 17, 2015 (git commit 6c3457ee20c19ae492d29c490af6800e7e6a0774)
 
   - Prevent core dump if the second argument to the quote() method 
