--- a/Changes
+++ b/Changes
@@ -1,11 +1,18 @@
 
-Version 3.5.2  Released ??
+Version 3.5.2  Released September 29, 2015
 
   - Fix enum value ordering on Postgres servers 9.1 and greater
     [Dagfinn Ilmari Mannsåker]
 
   - Return bigint values as plain integer values when they fit
     [Dagfinn Ilmari Mannsåker]
+
+  - Fix typo in sprintf for get_info() SQL_DATA_SOURCE_NAME
+    [Craig A. James]
+    (CPAN bug #106604)
+
+  - Set the repository in META.yml to github
+
 
 Version 3.5.1  Released February 17, 2015 (git commit 6c3457ee20c19ae492d29c490af6800e7e6a0774)
 
