--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 
+Version 3.5.3  Released October 1, 2015
+
+  - Minor fix in the test file t/03dbmethod.t
+
+
 Version 3.5.2  Released September 29, 2015 (git commit be8026c9160c4a29580a97dab57cb595c5448949)
 
   - Fix enum value ordering on Postgres servers 9.1 and greater
