--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 
-Version 3.5.3  Released October 1, 2015
+Version 3.5.3  Released October 1, 2015 (git commit 62ddf200106467ce9ad31d85715a4cdf63e8be14)
 
   - Minor fix in the test file t/03dbmethod.t
 
