--- a/Changes
+++ b/Changes
@@ -7,6 +7,9 @@ Version 3.5.4
     [Serge Pushkin]
     (CPAN bug #103137)
 
+  - Fix bug in quote_name which would fail to quote in some circumstances
+    (Github Issue #22)
+
 Version 3.5.3  Released October 1, 2015 (git commit 62ddf200106467ce9ad31d85715a4cdf63e8be14)
 
   - Minor fix in the test file t/03dbmethod.t
