--- a/Changes
+++ b/Changes
@@ -10,6 +10,8 @@ Version 3.5.4
   - Fix bug in quote_name which would fail to quote in some circumstances
     (Github Issue #22)
 
+  - Switch canonical repo to git://github.com/bucardo/dbdpg.git
+
 Version 3.5.3  Released October 1, 2015 (git commit 62ddf200106467ce9ad31d85715a4cdf63e8be14)
 
   - Minor fix in the test file t/03dbmethod.t
