--- a/TODO
+++ b/TODO
@@ -7,6 +7,8 @@ May also be some at
 https://github.com/bucardo/dbdpg
 (although we prefer using cpan.org)
 
+
+- ShowErrorStatement should work even for "quickexec" do() calls. (RT #120268)
 - Allow sth attribute to show async status (RT #116172)
 - Remove final reference to 'adsrc' column in Pg.pm
 - Make all tests work when server and/or client encoding is SQL_ASCII
