Reset pg_enable_utf8 after setting client_encoding in tests
This fixes running the tests against an SQL_ASCII database
(Github issue #26)

Commit 1dcdca74 moved the client_encoding setting from the connect
string to a SET command, but DBD::Pg does't detect that automatically,
so didn't en-/de-code data to/from UTF-8.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 
+  - Fix running tests with non-UTF8 server_encoding
+    (Github issue #26)
 
 Version 3.6.2  Released May 23, 2017 (git tag 3.6.2)
 
