--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 
   - Fix running tests with non-UTF8 server_encoding
+    [Dagfinn Ilmari Mannsåker]
     (Github issue #26)
   - Fix crash with missing client_encoding
     (Github issue #29)
