--- a/TODO
+++ b/TODO
@@ -35,3 +35,4 @@ https://github.com/bucardo/dbdpg
 - Composite type support: http://www.postgresql.org/docs/current/interactive/rowtypes.html
 - Full support for execute_array, e.g. the return values
 - Fix array support: execute([1,2]) not working as expected, deep arrays not returned correctly.
+- Support RaiseError on $sth from closed $dbh (GH #28)
