--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 ===================================================
 WARNING!!
 
-THIS IS A TEST VERSION (3.6.9_2) AND SHOULD BE USED 
+THIS IS A TEST VERSION (3.7.0) AND SHOULD BE USED 
 FOR TESTING PURPOSES ONLY. PLEASE USE A STABLE 
 VERSION (no underscore) BY VISITING:
 
@@ -16,7 +16,7 @@ DBD::Pg  --  the DBI PostgreSQL interface for Perl
 DESCRIPTION:
 ------------
 
-This is version 3.6.9_2 of DBD::Pg, the Perl interface to Postgres using DBI. 
+This is version 3.7.0 of DBD::Pg, the Perl interface to Postgres using DBI. 
 The web site for this interface, and the latest version, can be found at:
 
 	http://search.cpan.org/dist/DBD-Pg/
