--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 
-Version ???
+Version 3.7.1
+
+  - Fixed problem when using placeholders and escaped question marks, the recopied string 
+    was not terminated correctly.
+    [Greg Sabino Mullane]
+    (Github issue #33)
 
   - Declare VERSION as our in seldom-used Bundle module
     (CPAN ticket #123218)
