Make sure undefs in generated arrays are writeable
This fixes RT ticket #107556. Replace &PL_sv_undef with newSV(0) in the av_push

--- a/Changes
+++ b/Changes
@@ -6,6 +6,10 @@ Version 3.7.1
     [Greg Sabino Mullane]
     (Github issue #33)
 
+  - Make sure nulls in our self-generated arrays are not set as read-only in some Perls.
+    [Greg Sabino Mullane]
+    (CPAN ticket #107556)
+
   - Declare VERSION as our in seldom-used Bundle module
     (CPAN ticket #123218)
 
